Change poster geometry

--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,8 @@
 \usepackage{amssymb}
 %\usepackage{amsthm}
 
+\geometry{paperwidth=90cm,paperheight=160cm}
+
 \usetikzlibrary{arrows,positioning,arrows.meta} 
 \tikzset{
     %Define standard arrow tip
